--- a/app/views/product_noids/index.html.erb
+++ b/app/views/product_noids/index.html.erb
@@ -3,19 +3,40 @@
   <div class="row">
     <div class="col-md-12"><h1>Product NOIDs</h1></div>
     <div class="col-md-12">
+      <div class="row">
+        <b>
+          <div class="col-md-1">ID</div>
+          <div class="col-md-2">Product</div>
+          <div class="col-md-3">Noid</div>
+          <div class="col-md-2"><%= link_to 'New Product NOID', new_product_noid_path %></div>
+          <div class="col-md-4"></div>
+          <hr/>
+        </b>
+      </div>
       <% @product_noids.each do |product_noid| %>
-        <div class="col-md-1"><%= product_noid.id %></div>
-        <div class="col-md-2"><%= product_noid.product %></div>
-        <div class="col-md-3"><%= product_noid.noid %></div>
-        <div class="col-md-6">
-          <div class="col-md-4"><%= link_to 'Show', product_noid %></div>
-          <div class="col-md-4"><%= link_to 'Edit', edit_product_noid_path(product_noid) %></div>
-          <div class="col-md-4"><%= link_to 'Destroy', product_noid, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+        <div class="row">
+          <div class="col-md-1"><%= product_noid.id %></div>
+          <div class="col-md-2"><%= link_to product_noid.product, product_path(product_noid.product_id) %></div>
+          <div class="col-md-3">
+            <% if product_noid.monograph? %>
+              <%= link_to "#{product_noid.noid} (monograph)", hyrax_monograph_path(product_noid.noid) %>
+            <% elsif product_noid.file_set? %>
+              <%= link_to "#{product_noid.noid} (file_set)", hyrax_file_set_path(product_noid.noid) %>
+            <% else %>
+              <%= "#{product_noid.noid} (unknown)" %>
+            <% end %>
+          </div>
+          <div class="col-md-2">
+            <div class="col-md-4"><%= link_to 'Show', product_noid %></div>
+            <div class="col-md-4"><%= link_to 'Edit', edit_product_noid_path(product_noid) %></div>
+            <div class="col-md-4"><%= link_to 'Destroy', product_noid, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+          </div>
+          <div class="col-md-4"></div>
         </div>
       <% end %>
     </div>
     <div class="col-md-12"><br/></div>
-    <div class="col-md-12"><%= link_to 'New Product NOID', new_product_noid_path %></div>
+    <div class="col-md-12"><%= paginate @product_noids %></div>
     <div class="col-md-12"><br/></div>
   </div>
 </div>
