--- a/app/views/api_requests/index.html.erb
+++ b/app/views/api_requests/index.html.erb
@@ -25,8 +25,8 @@
         </div>
       <% end %>
     </div>
-      <div class="col-md-12"><br/></div>
-      <div class="col-md-12"><%= will_paginate @api_requests %></div>
-      <div class="col-md-12"><br/></div>
+    <div class="col-md-12"><br/></div>
+    <div class="col-md-12"><%= paginate @api_requests %></div>
+    <div class="col-md-12"><br/></div>
   </div>
 </div>
