--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -3,23 +3,38 @@
   <div class="row">
     <div class="col-md-12"><h1>Components</h1></div>
     <div class="col-md-12">
+      <div class="row">
+        <b>
+          <div class="col-md-1">ID</div>
+          <div class="col-md-3">Handle</div>
+          <div class="col-md-2">FileSet</div>
+          <div class="col-md-2">Monograph</div>
+          <div class="col-md-2"><%= link_to 'New Component', new_component_path %></div>
+          <div class="col-md-2"></div>
+          <hr/>
+        </b>
+      </div>
       <% @components.each do |component| %>
-        <% noid = HandleService.noid(component.handle) %>
-        <% fileset = FileSet.find(noid) %>
-        <% monograph = fileset.parent %>
-        <div class="col-md-1"><%= component.id %></div>
-        <div class="col-md-3"><%= link_to component.handle, HandleService.url(fileset.id) %></div>
-        <div class="col-md-2"><%= link_to fileset.id, hyrax_file_set_path(fileset.id) %></div>
-        <div class="col-md-2"><%= link_to monograph.id, monograph_catalog_path(monograph.id) %></div>
-        <div class="col-md-4">
-          <div class="col-md-4"><%= link_to 'Show', component %></div>
-          <div class="col-md-4"><%= link_to_if component.update?, 'Edit', edit_component_path(component) %></div>
-          <div class="col-md-4"><%= link_to_if component.destroy?, 'Destroy', component, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+        <div class="row">
+          <%
+            file_set = FileSet.find(component.noid) if component.file_set?
+            monograph = file_set&.parent
+            monograph ||= Monograph.find(component.noid) if component.monograph?
+          %>
+          <div class="col-md-1"><%= component.id %></div>
+          <div class="col-md-3"><%= link_to component.handle, HandleService.url(component.noid) %></div>
+          <div class="col-md-2"><%= link_to_if file_set.present?, file_set&.id, hyrax_file_set_path(file_set&.id) %></div>
+          <div class="col-md-2"><%= link_to_if monograph.present?, monograph&.id, hyrax_monograph_path(monograph&.id) %></div>
+          <div class="col-md-2">
+            <div class="col-md-4"><%= link_to 'Show', component %></div>
+            <div class="col-md-4"><%= link_to_if component.update?, 'Edit', edit_component_path(component) %></div>
+            <div class="col-md-4"><%= link_to_if component.destroy?, 'Destroy', component, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+          </div>
         </div>
       <% end %>
     </div>
     <div class="col-md-12"><br/></div>
-    <div class="col-md-12"><%= link_to 'New Component', new_component_path %></div>
+    <div class="col-md-12"><%= paginate @components %></div>
     <div class="col-md-12"><br/></div>
   </div>
 </div>
