--- a/app/views/institutions/index.html.erb
+++ b/app/views/institutions/index.html.erb
@@ -3,18 +3,32 @@
   <div class="row">
     <div class="col-md-12"><h1>Institutions</h1></div>
     <div class="col-md-12">
+      <div class="row">
+        <b>
+          <div class="col-md-1">ID</div>
+          <div class="col-md-1">Identifier</div>
+          <div class="col-md-3">Name</div>
+          <div class="col-md-2"><%= link_to 'New Institution', new_institution_path %></div>
+          <div class="col-md-5"></div>
+          <hr/>
+        </b>
+      </div>
       <% @institutions.each do |institution| %>
-        <div class="col-md-1"><%= institution.identifier %></div>
-        <div class="col-md-5"><%= institution.name %></div>
-        <div class="col-md-6">
-          <div class="col-md-4"><%= link_to 'Show', institution %></div>
-          <div class="col-md-4"><%= link_to_if institution.update?, 'Edit', edit_institution_path(institution) %></div>
-          <div class="col-md-4"><%= link_to_if institution.destroy?, 'Destroy', institution, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+        <div class="row">
+          <div class="col-md-1"><%= institution.id %></div>
+          <div class="col-md-1"><%= institution.identifier %></div>
+          <div class="col-md-3"><%= institution.name %></div>
+          <div class="col-md-2">
+            <div class="col-md-4"><%= link_to 'Show', institution %></div>
+            <div class="col-md-4"><%= link_to_if institution.update?, 'Edit', edit_institution_path(institution) %></div>
+            <div class="col-md-4"><%= link_to_if institution.destroy?, 'Destroy', institution, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+          </div>
+          <div class="col-md-5"></div>
         </div>
       <% end %>
     </div>
     <div class="col-md-12"><br/></div>
-    <div class="col-md-12"><%= link_to 'New Institution', new_institution_path %></div>
+    <div class="col-md-12"><%= paginate @institutions %></div>
     <div class="col-md-12"><br/></div>
   </div>
 </div>
