--- a/app/views/lessees/index.html.erb
+++ b/app/views/lessees/index.html.erb
@@ -3,23 +3,32 @@
   <div class="row">
     <div class="col-md-12"><h1>Lessees</h1></div>
     <div class="col-md-12">
+      <div class="row">
+        <b>
+          <div class="col-md-1">ID</div>
+          <div class="col-md-3">Identifier</div>
+          <div class="col-md-3">Institution</div>
+          <div class="col-md-2"><%= link_to 'New Lessee', new_lessee_path %></div>
+          <div class="col-md-3"></div>
+          <hr/>
+        </b>
+      </div>
       <% @lessees.each do |lessee| %>
-        <div class="col-md-1"><%= lessee.id %></div>
-        <div class="col-md-5">
-          <%= lessee.identifier %>
-          <% if lessee.institution? %>
-            <%= lessee.institution.name %>
-          <% end %>
-        </div>
-        <div class="col-md-6">
-          <div class="col-md-4"><%= link_to 'Show', lessee %></div>
-          <div class="col-md-4"><%= link_to_if lessee.update?, 'Edit', edit_lessee_path(lessee) %></div>
-          <div class="col-md-4"><%= link_to_if lessee.destroy?, 'Destroy', lessee, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+        <div class="row">
+          <div class="col-md-1"><%= lessee.id %></div>
+          <div class="col-md-3"><%= lessee.identifier %></div>
+          <div class="col-md-3"><%= lessee.institution.name if lessee.institution? %></div>
+          <div class="col-md-2">
+            <div class="col-md-4"><%= link_to 'Show', lessee %></div>
+            <div class="col-md-4"><%= link_to_if lessee.update?, 'Edit', edit_lessee_path(lessee) %></div>
+            <div class="col-md-4"><%= link_to_if lessee.destroy?, 'Destroy', lessee, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+          </div>
+          <div class="col-md-3"></div>
         </div>
       <% end %>
     </div>
     <div class="col-md-12"><br/></div>
-    <div class="col-md-6"><%= link_to 'New Lessee', new_lessee_path %></div>
+    <div class="col-md-12"><%= paginate @lessees %></div>
     <div class="col-md-12"><br/></div>
   </div>
 </div>
