--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,19 +3,32 @@
   <div class="row">
     <div class="col-md-12"><h1>Products</h1></div>
     <div class="col-md-12">
+      <div class="row">
+        <b>
+          <div class="col-md-1">ID</div>
+          <div class="col-md-2">Identifier</div>
+          <div class="col-md-3">Name</div>
+          <div class="col-md-2"><%= link_to 'New Product', new_product_path %></div>
+          <div class="col-md-4"></div>
+          <hr/>
+        </b>
+      </div>
       <% @products.each do |product| %>
-        <div class="col-md-1"><%= product.id %></div>
-        <div class="col-md-2"><%= product.identifier %></div>
-        <div class="col-md-3"><%= product.name %></div>
-        <div class="col-md-6">
-          <div class="col-md-4"><%= link_to 'Show', product %></div>
-          <div class="col-md-4"><%= link_to_if product.update?, 'Edit', edit_product_path(product) %></div>
-          <div class="col-md-4"><%= link_to_if product.destroy?, 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+        <div class="row">
+          <div class="col-md-1"><%= product.id %></div>
+          <div class="col-md-2"><%= product.identifier %></div>
+          <div class="col-md-3"><%= product.name %></div>
+          <div class="col-md-2">
+            <div class="col-md-4"><%= link_to 'Show', product %></div>
+            <div class="col-md-4"><%= link_to_if product.update?, 'Edit', edit_product_path(product) %></div>
+            <div class="col-md-4"><%= link_to_if product.destroy?, 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+          </div>
+          <div class="col-md-4"></div>
         </div>
       <% end %>
     </div>
     <div class="col-md-12"><br/></div>
-    <div class="col-md-12"><%= link_to 'New Product', new_product_path %></div>
+    <div class="col-md-12"><%= paginate @products %></div>
     <div class="col-md-12"><br/></div>
   </div>
 </div>
