--- a/app/views/counter_reports/without_customer_id/title/standard_views/_form.html.erb
+++ b/app/views/counter_reports/without_customer_id/title/standard_views/_form.html.erb
@@ -1,4 +1,4 @@
-<form action=<%= counter_report_path(id: 'tr_b1') %> method="show">
+<form action=<%= counter_report_path(id: report_id) %> method="show">
 <div class="row">
   <div class="col-sm-2 form-group">
     <label for="institution_identifier">Institution</label>
