Resolves HELIO-1985: Scroll Transcript via Keyboard

--- a/app/views/hyrax/file_sets/_media.html.erb
+++ b/app/views/hyrax/file_sets/_media.html.erb
@@ -19,7 +19,7 @@
         <div class="panel-heading">
           <h3 class="panel-title">Transcript</h3>
         </div>
-        <div class="panel-body fixed">
+        <div class="panel-body fixed" tabindex="0">
           <p><%= presenter.attribute_to_html(:transcript, render_as: :multiline, label: '') %></p>
         </div>
       </div><!-- /.transcript panel -->
@@ -30,7 +30,7 @@
     <div class="panel-heading">
       <h3 class="panel-title">Translation</h3>
     </div>
-    <div class="panel-body fixed">
+    <div class="panel-body fixed" tabindex="0">
       <p><%= presenter.attribute_to_html(:translation, render_as: :markdown, label: '') %></p>
     </div>
   </div><!-- /.translation panel -->
