HELIO-2249 Create COUNTER Book Usage by Access Type (TR_B3)

--- a/app/views/counter_reports/without_customer_id/index.html.erb
+++ b/app/views/counter_reports/without_customer_id/index.html.erb
@@ -12,3 +12,5 @@
 <%= render 'counter_reports/without_customer_id/title/standard_views/form', report_id: 'tr_b1' %>
 <h2>Access Denied by Book (TR_B2)</h2>
 <%= render 'counter_reports/without_customer_id/title/standard_views/form', report_id: 'tr_b2' %>
+<h2>Book Usage by Access Type (TR_B3)</h2>
+<%= render 'counter_reports/without_customer_id/title/standard_views/form', report_id: 'tr_b3' %>
