HELIO-1545 - add partner with us page; HELIO-2173 - adjust top level navigation

--- a/app/views/shared/_brand_press_footer_block_c.html.erb
+++ b/app/views/shared/_brand_press_footer_block_c.html.erb
@@ -2,6 +2,6 @@
   <% if footer_block_c(press_subdomain).present? %>
     <p><%= render_markdown footer_block_c(press_subdomain) %></p>
   <% else %>
-    <p>&copy; <%= name(press_subdomain) %> 2017</p>
+    <p>&copy; <%= name(press_subdomain) %> <%= Time.current.year %></p>
   <% end %>
 </div>
