--- a/fulcrum/_includes/header.html
+++ b/fulcrum/_includes/header.html
@@ -13,16 +13,15 @@
        </a>
 
         <ul class="right hide-on-med-and-down">
-          <li><a href="/about/index.html#readers" class="main-nav-link navi">For Readers</a></li>
-          <li><a href="/about/index.html#authors" class="main-nav-link navi">For Authors</a></li>
-          <li><a href="/about/index.html#publishers" class="main-nav-link navi">For Publishers</a></li>
+          <li><a href="/about/" class="main-nav-link navi">About</a></li>
+          <li><a href="/blog/" class="main-nav-link navi">Blog</a></li>
+          <li><a href="/partner-with-us/" class="main-nav-link navi">Partner With Us</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="/about/index.html#readers">For Readers</a></li>
-          <li><a href="/about/index.html#authors">For Authors</a></li>
-          <li><a href="/about/index.html#publishers">For Publishers</a></li>
+          <li><a href="/about/">About</a></li>
           <li><a href="/blog/">Blog</a></li>
+          <li><a href="/partner-with-us/">Partner With Us</a></li>
           <li><a href="mailto:{{ site.email }}">Contact</a></li>
           <li><a href="https://github.com/{{ site.github_username }}">Contribute</a></li>
           <li><a href="/accessibility/">Accessibility</a></li>
