--- a/fulcrum/_includes/footer.html
+++ b/fulcrum/_includes/footer.html
@@ -7,10 +7,9 @@
         </div>
         <div class="col l3 s12 offset-l1 footer-menu">
           <ul>
-            <li><a class="white-text" href="/about/index.html#authors">For Authors</a></li>
-            <li><a class="white-text" href="/about/index.html#publishers">For Publishers</a></li>
-            <li><a class="white-text" href="/about/index.html#readers">For Readers</a></li>
+            <li><a class="white-text" href="/about/">About</a></li>
             <li><a class="white-text" href="/blog/">Blog</a></li>
+            <li><a class="white-text" href="/partner-with-us/">Partner With Us</a></li>
             <li><a class="white-text" href="mailto:{{ site.email }}">Contact</a></li>
             <li><a class="white-text" href="https://github.com/{{ site.github_username }}">Contribute</a></li>
             <li><a id="sign-in" class="white-text" rel="nofollow"></a></li>
